Fix: add overflow to main

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,7 @@ body {
   justify-content: center;
   height: 100%;
   width: 80%;
+  overflow-y: auto;
 }
 
 .navbar,
